--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "html-webpack-plugin": "^2.24.1",
     "postcss-loader": "^1.1.0",
+    "postcss-simple-vars": "^3.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
